apps/hash-graph/lib/query-builder-derive/tests/ui/fail/unknown_attr_container.rs
use query_builder_derive::QueryBuilder;

#[derive(QueryBuilder)]
#[builder(unknown = "value")]
pub enum QueryPath {
    Nested,
}

fn main() {}
